# frostdart

./: .gitignore  .gitmodules  Cargo.toml  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: frost_sample_run.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: frostdart.podspec
ios/Classes/: frostdart.c
lib/: frostdart.dart  frostdart_bindings_generated.dart  output.dart  util.dart
linux/: CMakeLists.txt  frostdart_plugin.cc
linux/include/frostdart/: frostdart_plugin.h
macos/: frostdart.podspec
macos/Classes/: frostdart.c
scripts/android/: build_all.sh  download.sh
scripts/android/.cargo/: config
scripts/ios/: build_all.sh  download.sh
scripts/linux/: build_all.sh  download.sh  regen_bindings.sh
scripts/macos/: build_all.sh  build_macos.dart  download.sh
scripts/windows/: build_all.bat  build_all.sh  download.sh  regen_bindings.bat
src/: CMakeLists.txt  frostdart.c
windows/: CMakeLists.txt
(+4 files in other folders)
